Add an annotation file for view mode.

--- a/src/development.html
+++ b/src/development.html
@@ -27,9 +27,10 @@
 <body>
 <div id="css_area"></div>
 
-<div class="textae-control"></div>
+<div class="textae-control" style="position:fixed;"></div>
 <div class="textae-editor"></div>
 <div class="textae-editor" config="2_config.json" target="2_annotations.json"></div>
 <div class="textae-editor" config="2_config.json" target="3_annotations.json"></div>
+<div class="textae-editor" target="4_annotations.json" mode="view"></div>
 </body>
 </html>
