--- a/src/development.html
+++ b/src/development.html
@@ -31,6 +31,6 @@
 <div class="textae-editor"></div>
 <div class="textae-editor" config="2_config.json" target="2_annotations.json"></div>
 <div class="textae-editor" config="2_config.json" target="3_annotations.json"></div>
-<div class="textae-editor" target="4_annotations.json" mode="view"></div>
+<div class="textae-editor" target="4_annotations.json" mode="view">{"text":"Ribonucleic acid (RNA) is a ubiquitous family of large biological molecules that perform multiple vital roles in the coding, decoding, regulation, and expression of genes.","denotations":[{"id":"E3","span":{"begin":165,"end":170},"obj":"something"},{"id":"E4","span":{"begin":89,"end":97},"obj":"something"}],"relations":[{"id":"R1","pred":"something","subj":"E4","obj":"E3"}]}</div>
 </body>
 </html>
