--- a/src/development.html
+++ b/src/development.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="lib/css/textae.css">
     <link rel="stylesheet" href="lib/css/textae-control.css">
     <link rel="stylesheet" href="lib/css/textae-editor.css">
-
+    
     <script src="vender/jquery-2.0.3.min.js"></script>
     <script src="vender/jquery-ui-1.10.3.custom.min.js"></script>
     <script src="vender/jquery.jsPlumb-1.5.2-min.js"></script>
     <script src="vender/underscore.js"></script>
+    <script src="vender/ZeroClipboard.js"></script>
     <script src="lib/util.js"></script>
     <script src="lib/editor-make-id-factory.js"></script>
     <script src="lib/editor-make-model.js"></script>
