Extract file a 'textae-editor-load-save-dialog.css'.

--- a/src/development.html
+++ b/src/development.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="lib/css/textae.css">
     <link rel="stylesheet" href="lib/css/textae-control.css">
     <link rel="stylesheet" href="lib/css/textae-editor.css">
+    <link rel="stylesheet" href="lib/css/textae-editor-load-save-dialog.css">
 
     <script src="vender/jquery-2.0.3.min.js"></script>
     <script src="vender/jquery-ui-1.10.3.custom.min.js"></script>
