--- a/src/demo/bionlp-st-ge/demo-local.html
+++ b/src/demo/bionlp-st-ge/demo-local.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
 
     <link rel="stylesheet" href="../../vender/jquery-ui-1.10.3.custom.min.css" />
-    <link rel="stylesheet" href="../../lib/css/lib-textae-4.0.2.min.css" />
+    <link rel="stylesheet" href="../../lib/css/lib-textae-{{version}}.min.css" />
 
     <script src="../../vender/jquery-2.0.3.min.js"></script>
     <script src="../../vender/jquery-ui-1.10.3.custom.min.js"></script>
     <script src="../../vender/jquery.jsPlumb-1.5.2-min.js"></script>
     <script src="../../vender/underscore.js"></script>
-    <script src="../../lib/lib-textae-4.0.2.min.js"></script>
+    <script src="../../lib/lib-textae-{{version}}.min.js"></script>
 </head>
 
 <body>
