Extract files. 1. editor-history.js 1. editor-command.js 1. editor-view.js 1. editor-presenter.js

--- a/src/development.html
+++ b/src/development.html
@@ -17,6 +17,10 @@
     <script src="lib/util.js"></script>
     <script src="lib/editor-make-id-factory.js"></script>
     <script src="lib/editor-make-model.js"></script>
+    <script src="lib/editor-history.js"></script>
+    <script src="lib/editor-command.js"></script>
+    <script src="lib/editor-view.js"></script>
+    <script src="lib/editor-presenter.js"></script>
     <script src="lib/editor-make-data-access-object.js"></script>
     <script src="lib/editor.js"></script>
     <script src="lib/control.js"></script>
