Change the name of sub modules like constructor.

--- a/src/development.html
+++ b/src/development.html
@@ -15,13 +15,13 @@
     <script src="vender/jquery.jsPlumb-1.5.2-min.js"></script>
     <script src="vender/underscore.js"></script>
     <script src="lib/util.js"></script>
-    <script src="lib/editor-make-id-factory.js"></script>
-    <script src="lib/editor-make-model.js"></script>
+    <script src="lib/editor-id-factory.js"></script>
+    <script src="lib/editor-model.js"></script>
     <script src="lib/editor-history.js"></script>
     <script src="lib/editor-command.js"></script>
     <script src="lib/editor-view.js"></script>
     <script src="lib/editor-presenter.js"></script>
-    <script src="lib/editor-make-data-access-object.js"></script>
+    <script src="lib/editor-data-access-object.js"></script>
     <script src="lib/editor.js"></script>
     <script src="lib/control.js"></script>
     <script src="lib/tool.js"></script>
