Add un-minified file of the jsPlumb.

--- a/src/development.html
+++ b/src/development.html
@@ -12,7 +12,7 @@
 
     <script src="vender/jquery-2.0.3.min.js"></script>
     <script src="vender/jquery-ui-1.10.3.custom.min.js"></script>
-    <script src="vender/jquery.jsPlumb-1.5.2-min.js"></script>
+    <script src="vender/jquery.jsPlumb-1.5.2.js"></script>
     <script src="vender/underscore.js"></script>
     <script src="lib/util.js"></script>
     <script src="lib/editor-id-factory.js"></script>
