--- a/src/development.html
+++ b/src/development.html
@@ -14,18 +14,7 @@
     <script src="vender/jquery-ui-1.10.3.custom.min.js"></script>
     <script src="vender/jquery.jsPlumb-1.5.2.js"></script>
     <script src="vender/underscore.js"></script>
-    <script src="lib/util.js"></script>
-    <script src="lib/editor-id-factory.js"></script>
-    <script src="lib/editor-model.js"></script>
-    <script src="lib/editor-history.js"></script>
-    <script src="lib/editor-command.js"></script>
-    <script src="lib/editor-view.js"></script>
-    <script src="lib/editor-presenter.js"></script>
-    <script src="lib/editor-data-access-object.js"></script>
-    <script src="lib/editor.js"></script>
-    <script src="lib/control.js"></script>
-    <script src="lib/tool.js"></script>
-    <script src="lib/jquery.textae.js"></script>
+    <script src="lib/bundle.js"></script>
     <script src="lib/main.js"></script>
 </head>
 
