--- a/src/development.html
+++ b/src/development.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="lib/css/textae-control.css">
     <link rel="stylesheet" href="lib/css/textae-editor.css">
     <link rel="stylesheet" href="lib/css/textae-editor-load-save-dialog.css">
+    <link rel="stylesheet" href="lib/css/textae-editor-type-pallet.css">
 
     <script src="vender/jquery-2.0.3.min.js"></script>
     <script src="vender/jquery-ui-1.10.3.custom.min.js"></script>
