--- a/src/development.html
+++ b/src/development.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
 
     <link rel="stylesheet" href="vender/cssreset-min.css">
-    <link rel="stylesheet" href="vender/jquery-ui-1.10.3.custom.min.css" />
+    <link rel="stylesheet" href="vender/jquery-ui.min.css" />
     <link rel="stylesheet" href="lib/css/textae.css">
     <link rel="stylesheet" href="lib/css/textae-control.css">
     <link rel="stylesheet" href="lib/css/textae-editor.css">
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="lib/css/textae-editor-type-pallet.css">
 
     <script src="vender/jquery-2.0.3.min.js"></script>
-    <script src="vender/jquery-ui-1.10.3.custom.min.js"></script>
+    <script src="vender/jquery-ui.min.js"></script>
     <script src="vender/jquery.jsPlumb-1.5.2.js"></script>
     <script src="vender/underscore.js"></script>
     <script src="lib/bundle.js"></script>
