Bug fix: All icons at the control bar is enabled at init on the Firefox browser. An editor is selected after loading the annotation file and setting buttons ability. Because the config file is loaded synchronously.

--- a/src/development.html
+++ b/src/development.html
@@ -26,6 +26,48 @@
 <div class="textae-editor" mode="edit"></div>
 <div class="textae-editor" config="2_config.json" target="2_annotations.json" mode="edit"></div>
 <div class="textae-editor" config="2_config.json" target="3_annotations.json"></div>
-<div class="textae-editor" target="1_annotations.json">{"text":"Ribonucleic acid (RNA) is a ubiquitous family of large biological molecules that perform multiple vital roles in the coding, decoding, regulation, and expression of genes.","denotations":[{"id":"E3","span":{"begin":165,"end":170},"obj":"http://dbpedia.org/ontology/parent"},{"id":"E4","span":{"begin":89,"end":97},"obj":"something"}],"relations":[{"id":"R1","pred":"something","subj":"E4","obj":"E3"}]}</div>
+<div class="textae-editor" target="1_annotations.json" mode="edit">{"config": {
+        "relation types": [{
+            "color": "#5CFF0A",
+            "name": "locatedAt"
+        }, {
+            "color": "#FF0000",
+            "name": "themeOf"
+        }, {
+            "color": "#0000FF",
+            "name": "equivalentTo"
+        }],
+        "entity types": [{
+            "color": "#FFFF00",
+            "name": "Protein",
+            "default": true
+        }, {
+            "color": "#FF0000",
+            "name": "Cell"
+        }, {
+            "color": "#00FF00",
+            "name": "Transcription"
+        }, {
+            "color": "#FFFF00",
+            "name": "Gene_expression"
+        }, {
+            "color": "#FF00FF",
+            "name": "Negative_regulation"
+        }, {
+            "color": "#00FFFF",
+            "name": "Positive_regulation"
+        }, {
+            "color": "#FFFF66",
+            "name": "Regulation",
+            "uri": "http://www.yahoo.co.jp"
+        }, {
+            "color": "#666666",
+            "name": "New"
+        }, {
+            "color": "#0000FF",
+            "name": "Sentence",
+            "type": "block"
+        }]
+    },"text":"Ribonucleic acid (RNA) is a ubiquitous family of large biological molecules that perform multiple vital roles in the coding, decoding, regulation, and expression of genes.","denotations":[{"id":"E3","span":{"begin":165,"end":170},"obj":"http://dbpedia.org/ontology/parent"},{"id":"E4","span":{"begin":89,"end":97},"obj":"something"}],"relations":[{"id":"R1","pred":"something","subj":"E4","obj":"E3"}]}</div>
 </body>
 </html>
