--- a/src/development.html
+++ b/src/development.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
 
+    <link rel="stylesheet" href="outer.css">
     <link rel="stylesheet" href="vender/cssreset-min.css">
     <link rel="stylesheet" href="vender/jquery-ui.min.css" />
     <link rel="stylesheet" href="lib/css/textae.css">
