Add a parameter 'source' to read annotations from.

--- a/src/development.html
+++ b/src/development.html
@@ -25,7 +25,7 @@
 
 <div class="textae-control" style="position:fixed;"></div>
 <div class="textae-editor" mode="edit"></div>
-<div class="textae-editor" config="2_config.json" target="2_annotations.json" mode="edit"></div>
+<div class="textae-editor" config="2_config.json" target="dummy" source="2_annotations.json" mode="edit"></div>
 <div class="textae-editor" config="2_config.json" target="3_annotations.json"></div>
 <div class="textae-editor" target="1_annotations.json" mode="edit">{"config": {
         "relation types": [{
