--- a/src/demo/bionlp-st-ge/demo-local.html
+++ b/src/demo/bionlp-st-ge/demo-local.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="../../vender/jquery-ui.min.css" />
     <link rel="stylesheet" href="../../lib/css/textae-{{version}}.min.css" />
 
-    <script src="../../vender/jquery-2.1.1.min.js"></script>
+    <script src="../../vender/jquery/dist/jquery.min.js"></script>
     <script src="../../vender/jquery-ui.min.js"></script>
     <script src="../../vender/jquery.jsPlumb-1.5.2-min.js"></script>
-    <script src="../../vender/underscore.js"></script>
+    <script src="../../vender/underscore/underscore.js"></script>
     <script src="../../lib/textae-{{version}}.min.js"></script>
 </head>
 
