--- a/src/development.html
+++ b/src/development.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="lib/css/textae-editor-dialog.css">
     <link rel="stylesheet" href="lib/css/textae-editor-type-pallet.css">
 
-    <script src="vender/jquery-2.1.1.min.js"></script>
+    <script src="vender/jquery/dist/jquery.min.js"></script>
     <script src="vender/jquery-ui.min.js"></script>
     <script src="vender/jquery.jsPlumb-1.5.2.js"></script>
-    <script src="vender/underscore.js"></script>
+    <script src="vender/underscore/underscore.js"></script>
     <script src="lib/bundle.js"></script>
     <script src="lib/main.js"></script>
 </head>
