Show messages by the toastr.

--- a/src/development.html
+++ b/src/development.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="outer.css">
     <link rel="stylesheet" href="vender/cssreset-min.css">
     <link rel="stylesheet" href="vender/jquery-ui.min.css" />
+    <link rel="stylesheet" href="vender/toastr/toastr.min.css" />
     <link rel="stylesheet" href="lib/css/textae.css">
     <link rel="stylesheet" href="lib/css/textae-control.css">
     <link rel="stylesheet" href="lib/css/textae-editor.css">
@@ -16,6 +17,7 @@
     <script src="vender/jquery-ui.min.js"></script>
     <script src="vender/jquery.jsPlumb-1.5.2.js"></script>
     <script src="vender/underscore/underscore.js"></script>
+    <script src="vender/toastr/toastr.min.js"></script>
     <script src="lib/bundle.js"></script>
     <script src="lib/main.js"></script>
 </head>
