--- a/src/demo/bionlp-st-ge/demo-cdn.html
+++ b/src/demo/bionlp-st-ge/demo-cdn.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8" />
 
     <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
     <link rel="stylesheet" href="http://localhost:8000/dist/lib/css/textae-{{version}}.min.css" />
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
     <script src="http://localhost:8000/dist/vender/jquery.jsPlumb-1.5.2-min.js"></script>
     <script src="http://localhost:8000/dist/lib/textae-{{version}}.min.js"></script>
 </head>
