--- a/src/demo/bionlp-st-ge/demo-empty.html
+++ b/src/demo/bionlp-st-ge/demo-empty.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8" />
 
     <link rel="stylesheet" href="../../vender/jquery-ui.min.css" />
+    <link rel="stylesheet" href="../../vender/toastr/toastr.min.css" />
     <link rel="stylesheet" href="../../lib/css/textae-{{version}}.min.css" />
 
     <script src="../../vender/jquery/dist/jquery.min.js"></script>
     <script src="../../vender/jquery-ui.min.js"></script>
     <script src="../../vender/jquery.jsPlumb-1.5.2-min.js"></script>
-    <script src="../../vender/underscore/underscore.js"></script>
+    <script src="../../vender/underscore/underscore-min.js"></script>
+    <script src="../../vender/toastr/toastr.min.js"></script>
     <script src="../../lib/textae-{{version}}.min.js"></script>
 </head>
 
