Set the minimum of the line height by a style.

--- a/src/development.html
+++ b/src/development.html
@@ -27,7 +27,8 @@
 
 <div class="textae-control" style="position:fixed;"></div>
 <div class="textae-editor" mode="edit" status_bar='on'></div>
-<div class="textae-editor" config="2_config.json" target="dummy" source="http://localhost:8000/src/2_annotations.json" mode="edit" ></div>
+<div class="textae-editor" config="2_config.json" style="line-height: 32px;" target="dummy" source="http://localhost:8000/src/2_annotations.json" mode="edit" ></div>
+<div class="textae-editor" source="http://localhost:8000/src/2_annotations.json" mode="edit"></div>
 <div class="textae-editor" config="2_config.json" target="3_annotations.json" status_bar="off" ></div>
 <div class="textae-editor" target="1_annotations.json" mode="edit" status_bar='on'>{"config": {
         "relation types": [{
