Create the distribution for release 4.1.12.

--- a/src/demo/bionlp-st-ge/demo-cdn.html
+++ b/src/demo/bionlp-st-ge/demo-cdn.html
@@ -19,6 +19,6 @@
 <div id="css_area"></div>
 
 <div class="textae-control"></div>
-<div class="textae-editor" config="demo-config.json" target="demo-annotations.json"></div>
+<div class="textae-editor" config="demo-config.json" target="demo-annotations.json" style="line-height: 60px;"></div>
 </body>
 </html>
