--- a/src/development.html
+++ b/src/development.html
@@ -27,10 +27,10 @@
 
 <div class="textae-control" style="position:fixed;"></div>
 <div class="textae-editor" mode="edit" status_bar='on'></div>
-<div class="textae-editor" config="2_config.json" style="line-height: 48px;" target="dummy" source="http://localhost:8000/src/2_annotations.json" mode="edit" ></div>
-<div class="textae-editor" source="http://localhost:8000/src/2_annotations.json" mode="edit"></div>
-<div class="textae-editor" config="2_config.json" target="3_annotations.json" status_bar="off" ></div>
-<div class="textae-editor" target="1_annotations.json" mode="edit" status_bar='on'>{"config": {
+<div class="textae-editor" title="editor2 for comfirm a priority source and target parameters" config="2_config.json" style="line-height: 48px;" target="dummy" source="http://localhost:8000/src/2_annotations.json" mode="edit" ></div>
+<div class="textae-editor" title="editor3 having annotations for the simple mode"  source="http://localhost:8000/src/2_annotations.json" mode="edit"></div>
+<div class="textae-editor" title="editor4 having annotations for the instance mode with the view mode"config="2_config.json" target="3_annotations.json" status_bar="off" ></div>
+<div class="textae-editor" title="editro5 having inline config" target="1_annotations.json" mode="edit" status_bar='on'>{"config": {
         "relation types": [{
             "color": "#5CFF0A",
             "name": "locatedAt"
