--- a/dev/development.html
+++ b/dev/development.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="vender/cssreset-min.css">
     <link rel="stylesheet" href="vender/jquery-ui.min.css" />
     <link rel="stylesheet" href="vender/toastr/toastr.min.css" />
-    <link rel="stylesheet" href="lib/css/textae.css">
-    <link rel="stylesheet" href="lib/css/textae-control.css">
-    <link rel="stylesheet" href="lib/css/textae-editor.css">
-    <link rel="stylesheet" href="lib/css/textae-editor-dialog.css">
-    <link rel="stylesheet" href="lib/css/textae-editor-type-pallet.css">
+    <link rel="stylesheet" href="/src/lib/css/textae.css">
+    <link rel="stylesheet" href="/src/lib/css/textae-control.css">
+    <link rel="stylesheet" href="/src/lib/css/textae-editor.css">
+    <link rel="stylesheet" href="/src/lib/css/textae-editor-dialog.css">
+    <link rel="stylesheet" href="/src/lib/css/textae-editor-type-pallet.css">
 
     <script src="vender/jquery/dist/jquery.min.js"></script>
     <script src="vender/jquery-ui.min.js"></script>
     <script src="vender/jquery.jsPlumb-1.5.2.js"></script>
     <script src="vender/underscore/underscore.js"></script>
     <script src="vender/toastr/toastr.min.js"></script>
-    <script src="lib/bundle.js"></script>
-    <script src="lib/main.js"></script>
+    <script src="bundle.js"></script>
+    <script src="/src/lib/main.js"></script>
 </head>
 
 <body>
@@ -27,8 +27,8 @@
 
 <div class="textae-control" style="position:fixed;"></div>
 <div class="textae-editor" mode="edit" status_bar='on'></div>
-<div class="textae-editor" title="editor2 for comfirm a priority source and target parameters" config="2_config.json" style="line-height: 48px;" target="dummy" source="http://localhost:8000/src/2_annotations.json" mode="edit" ></div>
-<div class="textae-editor" title="editor3 having annotations for the simple mode"  source="http://localhost:8000/src/2_annotations.json" mode="edit"></div>
+<div class="textae-editor" title="editor2 for comfirm a priority source and target parameters" config="2_config.json" style="line-height: 48px;" target="dummy" source="http://localhost:8000/dev/2_annotations.json" mode="edit" ></div>
+<div class="textae-editor" title="editor3 having annotations for the simple mode"  source="http://localhost:8000/dev/2_annotations.json" mode="edit"></div>
 <div class="textae-editor" title="editor4 having annotations for the instance mode with the view mode"config="2_config.json" target="3_annotations.json" status_bar="off" ></div>
 <div class="textae-editor" title="editro5 having inline config" target="1_annotations.json" mode="edit" status_bar='on'>{"config": {
         "relation types": [{
