Change config format - Rename a attribute from name to id. - Remove a uri attribute. - Add a label attribute. - Show id with label on the pallet. - Fix test data. - Refactor modules.  - TypeContainer.  - EntityRenderer.  - Pallet.

--- a/dev/development.html
+++ b/dev/development.html
@@ -33,43 +33,43 @@
 <div class="textae-editor" title="editro5 having inline config" target="1_annotations.json" mode="edit" status_bar='on'>{"config": {
         "relation types": [{
             "color": "#5CFF0A",
-            "name": "locatedAt"
+            "id": "locatedAt"
         }, {
             "color": "#FF0000",
-            "name": "themeOf"
+            "id": "themeOf"
         }, {
             "color": "#0000FF",
-            "name": "equivalentTo"
+            "id": "equivalentTo"
         }],
         "entity types": [{
             "color": "#FFFF00",
-            "name": "Protein",
+            "id": "Protein",
             "default": true
         }, {
             "color": "#FF0000",
-            "name": "Cell"
+            "id": "Cell"
         }, {
             "color": "#00FF00",
-            "name": "Transcription"
+            "id": "Transcription"
         }, {
             "color": "#FFFF00",
-            "name": "Gene_expression"
+            "id": "Gene_expression"
         }, {
             "color": "#FF00FF",
-            "name": "Negative_regulation"
+            "id": "Negative_regulation"
         }, {
             "color": "#00FFFF",
-            "name": "Positive_regulation"
+            "id": "Positive_regulation"
         }, {
             "color": "#FFFF66",
-            "name": "Regulation",
+            "id": "Regulation",
             "uri": "http://www.yahoo.co.jp"
         }, {
             "color": "#666666",
-            "name": "New"
+            "id": "New"
         }, {
             "color": "#0000FF",
-            "name": "Sentence",
+            "id": "Sentence",
             "type": "block"
         }]
     },"text":"Ribonucleic acid (RNA) is a ubiquitous family of large biological molecules that perform multiple vital roles in the coding, decoding, regulation, and expression of genes.","denotations":[{"id":"E3","span":{"begin":165,"end":170},"obj":"http://dbpedia.org/ontology/parent"},{"id":"E4","span":{"begin":89,"end":97},"obj":"something"}],"relations":[{"id":"R1","pred":"something","subj":"E4","obj":"E3"}]}</div>
