--- a/dev/development.html
+++ b/dev/development.html
@@ -1,77 +1,80 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
-    <meta charset="utf-8" />
+  <meta charset="utf-8" />
 
-    <link rel="stylesheet" href="outer.css">
-    <link rel="stylesheet" href="vender/cssreset-min.css">
-    <link rel="stylesheet" href="vender/jquery-ui.min.css" />
-    <link rel="stylesheet" href="vender/toastr/toastr.min.css" />
-    <link rel="stylesheet" href="/src/lib/css/textae.css">
-    <link rel="stylesheet" href="/src/lib/css/textae-control.css">
-    <link rel="stylesheet" href="/src/lib/css/textae-editor.css">
-    <link rel="stylesheet" href="/src/lib/css/textae-editor-dialog.css">
-    <link rel="stylesheet" href="/src/lib/css/textae-editor-type-pallet.css">
+  <link rel="stylesheet" href="outer.css">
+  <link rel="stylesheet" href="vender/cssreset-min.css">
+  <link rel="stylesheet" href="vender/jquery-ui.min.css" />
+  <link rel="stylesheet" href="vender/toastr/toastr.min.css" />
+  <link rel="stylesheet" href="/src/lib/css/textae.css">
+  <link rel="stylesheet" href="/src/lib/css/textae-control.css">
+  <link rel="stylesheet" href="/src/lib/css/textae-editor.css">
+  <link rel="stylesheet" href="/src/lib/css/textae-editor-dialog.css">
+  <link rel="stylesheet" href="/src/lib/css/textae-editor-type-pallet.css">
 
-    <script src="vender/jquery/dist/jquery.min.js"></script>
-    <script src="vender/jquery-ui.min.js"></script>
-    <script src="vender/jquery.jsPlumb-1.5.2.js"></script>
-    <script src="vender/underscore/underscore.js"></script>
-    <script src="vender/toastr/toastr.min.js"></script>
-    <script src="bundle.js"></script>
-    <script src="/src/lib/main.js"></script>
+  <script src="vender/jquery/dist/jquery.min.js"></script>
+  <script src="vender/jquery-ui.min.js"></script>
+  <script src="vender/jquery.jsPlumb-1.5.2.js"></script>
+  <script src="vender/underscore/underscore.js"></script>
+  <script src="vender/toastr/toastr.min.js"></script>
+  <script src="bundle.js"></script>
+  <script src="/src/lib/main.js"></script>
 </head>
 
 <body>
-<div id="css_area"></div>
+  <div id="css_area"></div>
 
-<div class="textae-control" style="position:fixed;"></div>
-<div class="textae-editor" mode="edit" status_bar='on'></div>
-<div class="textae-editor" title="editor2 for comfirm a priority source and target parameters" config="2_config.json" style="line-height: 48px;" target="dummy" source="http://localhost:8000/dev/2_annotations.json" mode="edit" ></div>
-<div class="textae-editor" title="editor3 having annotations for the simple mode"  source="http://localhost:8000/dev/2_annotations.json" mode="edit"></div>
-<div class="textae-editor" title="editor4 having annotations for the instance mode with the view mode"config="2_config.json" target="3_annotations.json" status_bar="off" ></div>
-<div class="textae-editor" title="editro5 having inline config" target="1_annotations.json" mode="edit" status_bar='on'>{"config": {
-        "relation types": [{
-            "color": "#5CFF0A",
-            "id": "locatedAt"
-        }, {
-            "color": "#FF0000",
-            "id": "themeOf"
-        }, {
-            "color": "#0000FF",
-            "id": "equivalentTo"
-        }],
-        "entity types": [{
-            "color": "#FFFF00",
-            "id": "Protein",
-            "default": true
-        }, {
-            "color": "#FF0000",
-            "id": "Cell"
-        }, {
-            "color": "#00FF00",
-            "id": "Transcription"
-        }, {
-            "color": "#FFFF00",
-            "id": "Gene_expression"
-        }, {
-            "color": "#FF00FF",
-            "id": "Negative_regulation"
-        }, {
-            "color": "#00FFFF",
-            "id": "Positive_regulation"
-        }, {
-            "color": "#FFFF66",
-            "id": "Regulation",
-            "uri": "http://www.yahoo.co.jp"
-        }, {
-            "color": "#666666",
-            "id": "New"
-        }, {
-            "color": "#0000FF",
-            "id": "Sentence",
-            "type": "block"
-        }]
-    },"text":"Ribonucleic acid (RNA) is a ubiquitous family of large biological molecules that perform multiple vital roles in the coding, decoding, regulation, and expression of genes.","denotations":[{"id":"E3","span":{"begin":165,"end":170},"obj":"http://dbpedia.org/ontology/parent"},{"id":"E4","span":{"begin":89,"end":97},"obj":"something"}],"relations":[{"id":"R1","pred":"something","subj":"E4","obj":"E3"}]}</div>
+  <div class="textae-control" style="position:fixed;"></div>
+  <div class="textae-editor" mode="edit" status_bar='on'></div>
+  <div class="textae-editor" title="editor2 for comfirm a priority source and target parameters" config="2_config.json" style="line-height: 48px;" target="dummy" source="http://localhost:8000/dev/2_annotations.json" mode="edit"></div>
+  <div class="textae-editor" title="editor3 having annotations for the simple mode" source="http://localhost:8000/dev/2_annotations.json" mode="edit"></div>
+  <div class="textae-editor" title="editor4 having annotations for the instance mode with the view mode" config="2_config.json" target="3_annotations.json" status_bar="off"></div>
+  <div class="textae-editor" title="editro5 having inline config" target="1_annotations.json" mode="edit" status_bar='on'>
+    {"config": {
+      "relation types": [{
+          "color": "#5CFF0A",
+          "id": "locatedAt"
+      }, {
+          "color": "#FF0000",
+          "id": "themeOf"
+      }, {
+          "color": "#0000FF",
+          "id": "equivalentTo"
+      }],
+      "entity types": [{
+          "color": "#FFFF00",
+          "id": "Protein",
+          "default": true
+      }, {
+          "color": "#FF0000",
+          "id": "Cell"
+      }, {
+          "color": "#00FF00",
+          "id": "Transcription"
+      }, {
+          "color": "#FFFF00",
+          "id": "Gene_expression"
+      }, {
+          "color": "#FF00FF",
+          "id": "Negative_regulation"
+      }, {
+          "color": "#00FFFF",
+          "id": "Positive_regulation"
+      }, {
+          "color": "#FFFF66",
+          "id": "Regulation",
+          "uri": "http://www.yahoo.co.jp"
+      }, {
+          "color": "#666666",
+          "id": "New"
+      }, {
+          "color": "#0000FF",
+          "id": "Sentence",
+          "type": "block"
+      }]
+  },"text":"Ribonucleic acid (RNA) is a ubiquitous family of large biological molecules that perform multiple vital roles in the coding, decoding, regulation, and expression of genes.","denotations":[{"id":"E3","span":{"begin":165,"end":170},"obj":"http://dbpedia.org/ontology/parent"},{"id":"E4","span":{"begin":89,"end":97},"obj":"something"}],"relations":[{"id":"R1","pred":"something","subj":"E4","obj":"E3"}]}</div>
 </body>
+
 </html>
