Use the npm instead of the bower

--- a/dev/development.html
+++ b/dev/development.html
@@ -5,20 +5,20 @@
   <meta charset="utf-8" />
 
   <link rel="stylesheet" href="outer.css">
-  <link rel="stylesheet" href="vender/cssreset-min.css">
+  <link rel="stylesheet" href="../node_modules/yui/cssreset/cssreset-min.css">
   <link rel="stylesheet" href="vender/jquery-ui.min.css" />
-  <link rel="stylesheet" href="vender/toastr/toastr.min.css" />
+  <link rel="stylesheet" href="../node_modules/toastr/build/toastr.min.css" />
   <link rel="stylesheet" href="/src/lib/css/textae.css">
   <link rel="stylesheet" href="/src/lib/css/textae-control.css">
   <link rel="stylesheet" href="/src/lib/css/textae-editor.css">
   <link rel="stylesheet" href="/src/lib/css/textae-editor-dialog.css">
   <link rel="stylesheet" href="/src/lib/css/textae-editor-type-pallet.css">
 
-  <script src="vender/jquery/dist/jquery.min.js"></script>
+  <script src="../node_modules/jquery/dist/jquery.min.js"></script>
   <script src="vender/jquery-ui.min.js"></script>
   <script src="vender/jquery.jsPlumb-1.5.2.js"></script>
-  <script src="vender/underscore/underscore.js"></script>
-  <script src="vender/toastr/toastr.min.js"></script>
+  <script src="../node_modules/underscore/underscore.js"></script>
+  <script src="../node_modules/toastr/build/toastr.min.js"></script>
   <script src="bundle.js"></script>
   <script src="/src/lib/main.js"></script>
 </head>
