Add a polyfill library of Element.prototype.closest for the safari

--- a/src/demo/bionlp-st-ge/demo-cdn.html
+++ b/src/demo/bionlp-st-ge/demo-cdn.html
@@ -14,6 +14,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
   <script src="http://localhost:8000/dist/vender/jquery.jsPlumb-1.5.2-min.js"></script>
   <script src="http://localhost:8000/dist/lib/textae-{{version}}.min.js"></script>
+  <script src="https://cdn.polyfill.io/v2/polyfill.js?features=Element.prototype.closest"></script>
 </head>
 
 <body>
