--- a/dev/development.html
+++ b/dev/development.html
@@ -19,6 +19,7 @@
   <script src="vender/jquery.jsPlumb-1.5.2.js"></script>
   <script src="../node_modules/underscore/underscore.js"></script>
   <script src="../node_modules/toastr/build/toastr.min.js"></script>
+  <script src="../node_modules/element-closest/closest.js"></script>
   <script src="bundle.js"></script>
   <script src="/src/lib/main.js"></script>
 </head>
