--- a/src/demo/bionlp-st-ge/demo-multi.html
+++ b/src/demo/bionlp-st-ge/demo-multi.html
@@ -6,14 +6,14 @@
 
   <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/themes/smoothness/jquery-ui.css" />
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
-  <link rel="stylesheet" href="http://localhost:8000/dist/lib/css/textae-4.3.0.min.css" />
+  <link rel="stylesheet" href="http://localhost:8000/dist/lib/css/textae-{{version}}.min.css" />
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
   <script src="http://localhost:8000/dist/vender/jquery.jsPlumb-1.5.2-min.js"></script>
-  <script src="http://localhost:8000/dist/lib/textae-4.3.0.min.js"></script>
+  <script src="http://localhost:8000/dist/lib/textae-{{version}}.min.js"></script>
   <script src="https://cdn.polyfill.io/v2/polyfill.js?features=Element.prototype.closest"></script>
 </head>
 
