--- a/dev/development.html
+++ b/dev/development.html
@@ -27,7 +27,7 @@
 <body>
   <div id="css_area"></div>
 
-  <input>
+  <input><span>Wellcome!</span>
   <div class="textae-control" style="position:fixed;"></div>
   <div class="textae-editor" title="editor1" mode="edit" status_bar='on'></div>
   <input />
