Sticky controls in their editors

--- a/dev/development.html
+++ b/dev/development.html
@@ -20,6 +20,7 @@
   <script src="../node_modules/underscore/underscore.js"></script>
   <script src="../node_modules/toastr/build/toastr.min.js"></script>
   <script src="../node_modules/element-closest/closest.js"></script>
+  <script src="../node_modules/sticky-kit/dist/sticky-kit.js"></script>
   <script src="bundle.js"></script>
   <script src="/src/lib/main.js"></script>
 </head>
