Prepare distributions for the sticky-kit

--- a/src/demo/bionlp-st-ge/demo-empty.html
+++ b/src/demo/bionlp-st-ge/demo-empty.html
@@ -14,13 +14,12 @@
   <script src="../../vender/underscore/underscore-min.js"></script>
   <script src="../../vender/toastr/build/toastr.min.js"></script>
   <script src="../../vender/element-closest/closest.js"></script>
+  <script src="../../vender/sticky-kit/dist/sticky-kit.min.js"></script>
   <script src="../../lib/textae-{{version}}.min.js"></script>
 </head>
 
 <body>
   <div id="css_area"></div>
-
-  <div class="textae-control"></div>
   <div class="textae-editor"></div>
 </body>
 
