--- a/src/demo/bionlp-st-ge/demo-multi.html
+++ b/src/demo/bionlp-st-ge/demo-multi.html
@@ -10,17 +10,17 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
+  <script src="http://localhost:8000/dist/vender/jquery.jsPlumb-1.5.2-min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
-  <script src="http://localhost:8000/dist/vender/jquery.jsPlumb-1.5.2-min.js"></script>
-  <script src="http://localhost:8000/dist/lib/textae-{{version}}.min.js"></script>
   <script src="https://cdn.polyfill.io/v2/polyfill.js?features=Element.prototype.closest"></script>
+  <script src="https://cdn.jsdelivr.net/jquery.sticky-kit/1.1.2/jquery.sticky-kit.min.js"></script>
+  <script src="http://localhost:8000/dist/lib/textae-{{version}}.min.js"></script>
 </head>
 
 <body>
   <div id="css_area"></div>
 
-  <div class="textae-control"></div>
   <div class="textae-editor" target="demo-annotations.json"></div>
   <div class="textae-editor">
     {"config": {
