--- a/src/demo/development.html
+++ b/src/demo/development.html
@@ -14,6 +14,7 @@
   <script src="../vender/underscore/underscore-min.js"></script>
   <script src="../vender/toastr/build/toastr.min.js"></script>
   <script src="../vender/element-closest/closest.js"></script>
+  <script src="../vender/sticky-kit/dist/sticky-kit.min.js"></script>
   <script src="../lib/textae-{{version}}.min.js"></script>
 </head>
 
@@ -21,7 +22,6 @@
   <div id="css_area"></div>
 
   <input><span>Wellcome!</span>
-  <div class="textae-control" style="position:fixed;"></div>
   <div class="textae-editor" title="editor1" mode="edit" status_bar='on'></div>
   <input />
   <div class="textae-editor" title="editor2 for comfirm a priority source and target parameters" config="../../dev/2_config.json" style="line-height: 48px;" target="dummy" source="http://localhost:8000/dev/2_annotations.json" mode="edit"></div>
