--- a/dev/development.html
+++ b/dev/development.html
@@ -31,8 +31,8 @@
   <input><span>Wellcome!</span>
   <div class="textae-editor" title="editor1" mode="edit" status_bar='on'></div>
   <input />
-  <div class="textae-editor" title="editor2 for comfirm a priority source and target parameters" config="2_config.json" style="line-height: 48px;" target="dummy" source="http://localhost:8000/dev/2_annotations.json" mode="edit"></div>
-  <div class="textae-editor" title="editor3 having annotations for the simple mode" source="http://localhost:8000/dev/2_annotations.json" mode="edit"></div>
+  <div class="textae-editor" title="editor2 for comfirm a priority source and target parameters" config="2_config.json" style="line-height: 48px;" target="dummy" source="http://localhost:8000/dev/2_annotations.json" mode="edit" control="visible"></div>
+  <div class="textae-editor" title="editor3 having annotations for the simple mode" source="http://localhost:8000/dev/2_annotations.json" mode="edit" control="hidden"></div>
   <div class="textae-editor" title="editor4 having annotations for the instance mode with the view mode" config="2_config.json" target="3_annotations.json" status_bar="off"></div>
   <div class="textae-editor" title="editro5 having inline config" target="1_annotations.json" mode="edit" status_bar='on'>
     {"config": {
