Remove URL parameters

--- a/src/demo/bionlp-st-ge/demo-cdn.html
+++ b/src/demo/bionlp-st-ge/demo-cdn.html
@@ -20,7 +20,7 @@
 
 <body>
   <div id="css_area"></div>
-  <div class="textae-editor" config="demo-config.json" target="demo-annotations.json" style="line-height: 60px;"></div>
+  <div class="textae-editor" config="demo-config.json" target="demo-annotations.json" style="line-height: 60px;" control="visible"></div>
 </body>
 
 </html>
