--- a/src/demo/bionlp-st-ge/demo-empty.html
+++ b/src/demo/bionlp-st-ge/demo-empty.html
@@ -20,7 +20,7 @@
 
 <body>
   <div id="css_area"></div>
-  <div class="textae-editor"></div>
+  <div class="textae-editor" control="visible"></div>
 </body>
 
 </html>
