--- a/src/demo/bionlp-st-ge/demo-multi.html
+++ b/src/demo/bionlp-st-ge/demo-multi.html
@@ -21,8 +21,8 @@
 <body>
   <div id="css_area"></div>
 
-  <div class="textae-editor" target="demo-annotations.json"></div>
-  <div class="textae-editor">
+  <div class="textae-editor" target="demo-annotations.json" mode="edit" autocompletion_ws="/dev/autocomplete"></div>
+  <div class="textae-editor" mode="edit">
     {"config": {
       "entity types": [{
           "color": "#FFFF66",
