--- a/dev/development.html
+++ b/dev/development.html
@@ -29,7 +29,7 @@
   <div id="css_area"></div>
 
   <input><span>Wellcome!</span>
-  <div class="textae-editor" title="editor1" mode="edit" status_bar='on'></div>
+  <div class="textae-editor" title="editor1" mode="edit" status_bar="on" config="1_config.json?aaa" source="1_annotations.json?bbbb=aaa" autocompletion_ws="/dev/autocomplete?order=desc"></div>
   <input />
   <div class="textae-editor" title="editor2 for comfirm a priority source and target parameters" config="2_config.json" style="line-height: 48px;" target="dummy" source="http://localhost:8000/dev/2_annotations.json" mode="edit" control="visible"></div>
   <div class="textae-editor" title="editor3 having annotations for the simple mode" source="http://localhost:8000/dev/2_annotations.json" mode="edit" control="hidden"></div>
