--- a/src/demo/development.html
+++ b/src/demo/development.html
@@ -22,10 +22,10 @@
   <div id="css_area"></div>
 
   <input><span>Wellcome!</span>
-  <div class="textae-editor" title="editor1" mode="edit" status_bar='on'></div>
+  <div class="textae-editor" title="editor1" mode="edit" status_bar="on" config="../../dev/1_config.json?aaa" source="../../dev/1_annotations.json?bbbb=aaa" autocompletion_ws="/dev/autocomplete?order=desc"></div>
   <input />
-  <div class="textae-editor" title="editor2 for comfirm a priority source and target parameters" config="../../dev/2_config.json" style="line-height: 48px;" target="dummy" source="http://localhost:8000/dev/2_annotations.json" mode="edit"></div>
-  <div class="textae-editor" title="editor3 having annotations for the simple mode" source="http://localhost:8000/dev/2_annotations.json" mode="edit"></div>
+  <div class="textae-editor" title="editor2 for comfirm a priority source and target parameters" config="../../dev/2_config.json" style="line-height: 48px;" target="dummy" source="http://localhost:8000/dev/2_annotations.json" mode="edit" control="visible"></div>
+  <div class="textae-editor" title="editor3 having annotations for the simple mode" source="http://localhost:8000/dev/2_annotations.json" mode="edit" control="hidden"></div>
   <div class="textae-editor" title="editor4 having annotations for the instance mode with the view mode" config="../../dev/2_config.json" target="../../dev/3_annotations.json" status_bar="off"></div>
   <div class="textae-editor" title="editro5 having inline config" target="../../dev/1_annotations.json" mode="edit" status_bar='on'>
     {"config": {
