Fix autocomplete appearance

--- a/dev/development.html
+++ b/dev/development.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8" />
 
-  <link rel="stylesheet" href="outer.css">
-  <link rel="stylesheet" href="../node_modules/yui/cssreset/cssreset-min.css">
+  <link rel="stylesheet" href="outer.css" />
+  <link rel="stylesheet" href="../node_modules/yui/cssreset/cssreset-min.css" />
   <link rel="stylesheet" href="vender/jquery-ui.min.css" />
   <link rel="stylesheet" href="../node_modules/toastr/build/toastr.min.css" />
+  <link rel="stylesheet" href="vender/font-awesome-4.6.3/css/font-awesome.css" />
   <link rel="stylesheet" href="/src/lib/css/textae.css">
 
   <script src="../node_modules/jquery/dist/jquery.min.js"></script>
