--- a/src/demo/development.html
+++ b/src/demo/development.html
@@ -6,6 +6,7 @@
 
   <link rel="stylesheet" href="../vender/jquery-ui.min.css" />
   <link rel="stylesheet" href="../vender/toastr/build/toastr.min.css" />
+  <link rel="stylesheet" href="../vender/font-awesome-4.6.3/css/font-awesome.css" />
   <link rel="stylesheet" href="../lib/css/textae-{{version}}.min.css" />
 
   <script src="../vender/jquery/dist/jquery.min.js"></script>
