--- a/src/demo/bionlp-st-ge/demo-cdn.html
+++ b/src/demo/bionlp-st-ge/demo-cdn.html
@@ -6,6 +6,7 @@
 
   <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/themes/smoothness/jquery-ui.css" />
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
   <link rel="stylesheet" href="http://localhost:8000/dist/lib/css/textae-{{version}}.min.css" />
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
