--- a/dev/development.html
+++ b/dev/development.html
@@ -75,6 +75,29 @@
           "type": "block"
       }]
   },"text":"Ribonucleic acid (RNA) is a ubiquitous family of large biological molecules that perform multiple vital roles in the coding, decoding, regulation, and expression of genes.","denotations":[{"id":"E3","span":{"begin":165,"end":170},"obj":"http://dbpedia.org/ontology/parent"},{"id":"E4","span":{"begin":89,"end":97},"obj":"something"}],"relations":[{"id":"R1","pred":"something","subj":"E4","obj":"E3"}]}</div>
+  <div class="textae-editor" title="editor6 for save_to parameter" target="3_annotations.json" save_to="saveTo.json" mode="edit"></div>
+  <div class="textae-editor save_to" mode="edit"></div>
+  <script>
+  // Run scripts before start the textae.
+  !function(){
+    if(location.search){
+      const queries = location.search.substring(1).split('&')
+      const editors = Array.from(document.querySelectorAll('.textae-editor.save_to'))
+
+      for (var editor of editors) {
+        for (var query of queries) {
+          var name = query.split('=')[0]
+          editor.setAttribute(name, query.split('=')[1] ? decodeURIComponent(query.split('=')[1]) : name)
+        }
+      }
+    }
+  }()
+
+  // Run scripts after start the textae.
+  setTimeout(function() {
+    document.querySelector('.textae-editor').focus()
+  }, 500)
+  </script>  
 </body>
 
 </html>
