Adjust files for the single package type

--- a/dev/development.html
+++ b/dev/development.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="../node_modules/toastr/build/toastr.min.css" />
   <link rel="stylesheet" href="vender/font-awesome-4.6.3/css/font-awesome.css" />
   <link rel="stylesheet" href="/src/lib/css/textae.css">
+  <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="vender/jquery.jsPlumb-1.5.2.js"></script>  
   <script src="bundle.js"></script>
 </head>
 
