Change config for testing

--- a/dev/development.html
+++ b/dev/development.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="vender/font-awesome-4.6.3/css/font-awesome.css" />
   <link rel="stylesheet" href="/src/lib/css/textae.css">
   <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="vender/jquery.jsPlumb-1.5.2.js"></script>  
+  <script src="vender/jquery.jsPlumb-1.5.2.js"></script>
   <script src="bundle.js"></script>
 </head>
 
@@ -24,7 +24,7 @@
   <input />
   <div class="textae-editor" title="editor2 for comfirm a priority source and target parameters" config="2_config.json" style="line-height: 48px;" target="dummy" source="http://localhost:8000/dev/2_annotations.json" mode="edit" control="visible"></div>
   <div class="textae-editor" title="editor3 having annotations for the simple mode" source="http://localhost:8000/dev/2_annotations.json" mode="edit" control="hidden"></div>
-  <div class="textae-editor" title="editor4 having annotations for the instance mode with the view mode" config="2_config.json" target="3_annotations.json" status_bar="off"></div>
+  <div class="textae-editor" title="editor4 having annotations for the instance mode with the view mode" config="2_config.json" target="3_annotations.json" status_bar="off" control="visible"></div>
   <div class="textae-editor" title="editro5 having inline config" target="1_annotations.json" mode="edit" status_bar='on'>
     {"config": {
       "relation types": [{
@@ -91,8 +91,8 @@
   setTimeout(function() {
     document.querySelector('.textae-editor').focus()
   }, 500)
-  </script>  
-  <div class="textae-editor" title="editor7 import a target file from a text file." mode="edit"></div>  
+  </script>
+  <div class="textae-editor" title="editor7 import a target file from a text file." mode="edit"></div>
 
 </body>
 
