MODIFY html files to show an alert message for IE user

--- a/dev/development.html
+++ b/dev/development.html
@@ -74,16 +74,20 @@
   <script>
   // Run scripts before start the textae.
   !function(){
-    if(location.search){
+    var userAgent = window.navigator.userAgent.toLowerCase()
+    var isIE = (userAgent.indexOf('msie') >= 0 || userAgent.indexOf('trident') >= 0)
+    if (isIE) alert('Microsoft IE is not supported. Please use a HTML5-conformant browser, e.g., FireFox, Chrome, or Safari.')
+
+    if (location.search) {
       const queries = location.search.substring(1).split('&')
       const editors = Array.from(document.querySelectorAll('.textae-editor.save_to'))
 
-      for (var editor of editors) {
-        for (var query of queries) {
+      editors.forEach(function (editor) {
+        queries.forEach(function (query) {
           var name = query.split('=')[0]
           editor.setAttribute(name, query.split('=')[1] ? decodeURIComponent(query.split('=')[1]) : name)
-        }
-      }
+        })
+      })
     }
   }()
 
