--- a/dev/development.html
+++ b/dev/development.html
@@ -9,9 +9,13 @@
   <link rel="stylesheet" href="vender/jquery-ui.min.css" />
   <link rel="stylesheet" href="../node_modules/toastr/build/toastr.min.css" />
   <link rel="stylesheet" href="vender/font-awesome-4.6.3/css/font-awesome.css" />
+  <link rel="stylesheet" href="../node_modules/jsondiffpatch/public/formatters-styles/html.css">
+  <link rel="stylesheet" href="../node_modules/jsondiffpatch/public/formatters-styles/annotated.css">
   <link rel="stylesheet" href="/src/lib/css/textae.css">
   <script src="../node_modules/jquery/dist/jquery.min.js"></script>
   <script src="vender/jquery.jsPlumb-1.5.2.js"></script>
+  <script src="../node_modules/jsondiffpatch/public/build/jsondiffpatch.min.js"></script>
+  <script src="../node_modules/jsondiffpatch/public/build/jsondiffpatch-formatters.min.js"></script>
   <script src="bundle.js"></script>
 </head>
 
