MODIFY: change a sample editor div to check 'config_edit' status.

--- a/dev/development.html
+++ b/dev/development.html
@@ -26,7 +26,7 @@
   <div class="textae-editor" title="editor0" mode="edit" status_bar="on" source="http://pubannotation.org/projects/DisGeNET/docs/sourcedb/PubMed/sourceid/10021369/annotations.json" config_lock="true"></div>
   <div class="textae-editor" title="editor1" mode="edit" status_bar="on" config="1_config.json?aaa" source="1_annotations.json?bbbb=aaa" autocompletion_ws="/dev/autocomplete?order=desc" config_lock="false"></div>
   <input />
-  <div class="textae-editor" title="editor2 for comfirm a priority source and target parameters" config="2_config.json" style="line-height: 48px;" target="dummy" source="http://localhost:8000/dev/2_annotations.json?config_lock=true" mode="edit" control="visible"></div>
+  <div class="textae-editor" title="editor2 for comfirm a priority source and target parameters" config="2_config.json" style="line-height: 48px;" target="dummy" source="http://localhost:8000/dev/2_annotations.json?config_lock=true" config_lock="false" mode="edit" control="visible"></div>
   <div class="textae-editor" title="editor3 having annotations for the simple mode" source="http://localhost:8000/dev/2_annotations.json?config_lock=false" mode="edit" control="hidden"></div>
   <div class="textae-editor" title="editor4 having annotations for the instance mode with the view mode" config="2_config.json" target="3_annotations.json" status_bar="off" control="visible"></div>
   <div class="textae-editor" title="editro5 having inline config" target="1_annotations.json" mode="edit" status_bar='on'>
