bugfix: Entering a keyboard shortcut causes an error when you focus the editor before initialization

--- a/dev/development.html
+++ b/dev/development.html
@@ -77,6 +77,10 @@
   <div class="textae-editor save_to" mode="edit"></div>
   <div class="textae-editor" title="editor7 import a target file from a text file." mode="edit"></div>
 
+  <script>
+  // Focus on an editor before initializing.
+  setTimeout(() => document.querySelector('.textae-editor').focus(), 0)
+  </script>
 </body>
 
 </html>
