refactor: Fix html for testing

--- a/src/demo/development.html
+++ b/src/demo/development.html
@@ -62,7 +62,8 @@
       }]
   },"text":"Ribonucleic acid (RNA) is a ubiquitous family of large biological molecules that perform multiple vital roles in the coding, decoding, regulation, and expression of genes.","denotations":[{"id":"E3","span":{"begin":165,"end":170},"obj":"http://dbpedia.org/ontology/parent"},{"id":"E4","span":{"begin":89,"end":97},"obj":"something"}],"relations":[{"id":"R1","pred":"something","subj":"E4","obj":"E3"}]}</div>
 
-  <div class="textae-editor" title="editor7 import a target file from a text file." mode="edit"></div>
+  <div class="textae-editor" title="editor7 empty editor." mode="edit"></div>
+  <div class="textae-editor" title="editor8 empty view mode editor."></div>
 
   <script>
     // Run scripts before start the textae.
