feature: Do not collapse consecutive whitespace characters in the target text into one character

--- a/src/demo/development.html
+++ b/src/demo/development.html
@@ -64,6 +64,7 @@
 
   <div class="textae-editor" title="editor7 empty editor." mode="edit"></div>
   <div class="textae-editor" title="editor8 empty view mode editor."></div>
+  <div class="textae-editor" title="editro9" mode="edit">{"text":"   I have a stomach  ache.","denotations":[{"span":{"begin":12,"end":19},"obj":"http://purl.obolibrary.org/obo/UBERON_0000945"}]}</div>
 
   <script>
     // Run scripts before start the textae.
