--- a/dev/development.html
+++ b/dev/development.html
@@ -70,6 +70,7 @@
     save_to="http://pubannotation.org/projects/penguin-fly/docs/sourcedb/PubMed/sourceid/10089213/annotations.json" 
     mode="edit"></div>
   <div class="textae-editor" title="editor7 import a target file from a text file." mode="edit"></div>
+  <div class="textae-editor" title="editro8" mode="edit">{"text":"   I have a stomach  ache.","denotations":[{"span":{"begin":12,"end":19},"obj":"http://purl.obolibrary.org/obo/UBERON_0000945"}]}</div>
 
   <script>
   // Focus on an editor before initializing.
