--- a/dev/development.html
+++ b/dev/development.html
@@ -61,8 +61,7 @@
           "id": "New"
       }, {
           "color": "#0000FF",
-          "id": "Sentence",
-          "type": "block"
+          "id": "Sentence"
       }]
   },"text":"Ribonucleic acid (RNA) is a ubiquitous family of large biological molecules that perform multiple vital roles in the coding, decoding, regulation, and expression of genes.","denotations":[{"id":"E3","span":{"begin":165,"end":170},"obj":"http://dbpedia.org/ontology/parent"},{"id":"E4","span":{"begin":89,"end":97},"obj":"something"}],"relations":[{"id":"R1","pred":"something","subj":"E4","obj":"E3"}]}</div>
   <div class="textae-editor" title="editor6 for save_to parameter" 
